--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Bodymovin Demo</title>
   
   <!--  Styles  -->
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
   
