adding not found animation.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-  
+  <h1>Reconnecting ... </h1>
   <div id="bm"> </div>
   
   <!-- Scripts -->
